# aegis

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.bot  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  config.example.json  docker-compose.yml  pyproject.toml  requirements.txt  run_aegis.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
aegis_core/: __init__.py  config.py
aegis_core/database/: session.py
aegis_core/exceptions/: __init__.py
aegis_core/logging/: __init__.py  setup.py
aegis_core/models/: __init__.py  entities.py
aegis_core/security/: mfa.py  signing.py  state.py  tokens.py
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/dependencies/: context.py
apps/api/middleware/: body_limit.py  request_context.py  service_auth.py
apps/api/routes/: account.py  auth.py  health.py  internal_bot.py  mfa.py  security.py  vault.py  verify_ui.py  version.py
apps/api/schemas/: auth.py  common.py  mfa.py  vault.py
apps/api/services/: auth.py  mfa.py  mfa_crypto.py  mfa_policy.py  recovery_codes.py  security_events.py  totp.py  vaults.py
apps/bot/: __init__.py  bot.py  main.py
apps/bot/cogs/: account.py  security.py  status.py  vault.py
apps/bot/services/: api.py
apps/client/: __init__.py  main.py
apps/client/api/: __init__.py  client.py
apps/client/crypto/: __init__.py  vault.py
apps/client/models/: __init__.py  records.py
docs/: DEPLOYMENT.md  THREAT_MODEL.md  authentication.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_aegis_verify.py
tests/: conftest.py
tests/integration/: test_api_smoke.py
tests/security/: test_log_redaction.py  test_mfa_core.py  test_plaintext_rejection.py  test_signing.py
tests/unit/: test_crypto.py
