[project]
name = "aegis-vault"
version = "0.1.0"
description = "Aegis zero-knowledge credential vault for Discord users"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Aegis contributors" }]
dependencies = [
  "aiohttp>=3.10",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "asyncpg>=0.29",
  "cryptography>=43.0",
  "discord.py>=2.4",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "PyNaCl>=1.5",
  "pyotp>=2.9",
  "pyperclip>=1.9",
  "qrcode[pil]>=8.0",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "SQLAlchemy>=2.0",
  "structlog>=24.4",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
  "webauthn>=2.5",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.16.0",
]

[project.scripts]
aegis-api = "apps.api.main:run"
aegis-bot = "apps.bot.main:run"
aegis-client = "apps.client.main:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["A", "ASYNC", "B", "C4", "E", "F", "I", "N", "PIE", "PTH", "RUF", "S", "SIM", "UP", "W"]
ignore = ["ASYNC240", "ASYNC250", "B008", "N818", "S101", "S104", "S105"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pyperclip", "qrcode"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["migrations.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis_core", "apps"]
